--- a/tasks/static/css/main_page.css
+++ b/tasks/static/css/main_page.css
@@ -1,7 +1,3 @@
-* {
-/ / border: 1 px solid red;
-}
-
 body {
     min-height: 100vh;
     padding: 0;
@@ -52,7 +48,6 @@ body {
 .projects-block {
     display: flex;
     flex-direction: column;
-
 }
 
 .projects-title {
@@ -92,7 +87,7 @@ body {
     cursor: pointer;
     opacity: 0;
     position: relative;
-    transition: opacity .2s ease-in-out;
+    transition: opacity 0.2s ease-in-out;
 }
 
 .task-actions .circle {
@@ -104,21 +99,19 @@ body {
 }
 
 .task-actions .actions-container {
-    opacity: 0;
     position: absolute;
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: space-around;
     background-color: white;
     width: 100px;
-    min-height: 30px;
+    min-height: 50px;
     border-radius: 5px;
     border: 1px solid #e2e2e2;
 }
 
-
 .task-actions:hover .actions-container {
-    opacity: 1;
+    display: flex;
 }
 
 .task:hover .task-actions {
@@ -193,6 +186,10 @@ body {
     padding: 5px;
 }
 
+#add-task {
+    display: none;
+}
+
 .add-task-form {
     margin-top: 10px;
     display: flex;
@@ -213,15 +210,14 @@ body {
 .add-task-form .edit-task-name {
     flex-basis: 70%;
     border-right: none;
-
 }
 
 .add-task-form .buttons {
     display: flex;
 }
 
-.add-task-form .buttons a,
-.add-task-form .buttons input {
+.add-task-form .buttons input,
+.add-task-form .buttons a {
     background-color: dodgerblue;
     color: white;
     border: none;
