--- a/tasks/templates/tasks/main_page.html
+++ b/tasks/templates/tasks/main_page.html
@@ -37,6 +37,7 @@
                 </li>
                 {% endfor %}
             </ul>
+            <form action=""></form>
             <button class="add-btn">
                 + Add
             </button>
@@ -50,7 +51,11 @@
 
         <ul class="task-list">
             {% for task in tasks %}
-            <li class="task">
+                {% if task.pk == selected_task %}
+                    {% block editing_task %}
+                    {% endblock %}
+                {% else %}
+                    <li class="task">
                     <span>
                         {% if task.priority == 'L' %}
                             <span class="priority" style="background-color: white"></span>
@@ -61,20 +66,21 @@
                         {% endif %}
                         <span class="task-name">{{ task.text }}</span>
                     </span>
-                <span>
-                        <span class="project">{{ task.project }}</span>
-                        <span class="project-tag"></span>
-                        <span class="task-actions">
-                            <span class="circle"></span>
-                            <span class="circle"></span>
-                            <span class="circle"></span>
-                            <span class="actions-container">
-                                <a class="action-btn" href="task/edit/{{ task.pk }}">Edit</a>
-                                <a class="action-btn" href="task/delete/{{ task.pk }}">Delete</a>
+                        <span>
+                            <span class="project">{{ task.project }}</span>
+                            <span class="project-tag"></span>
+                            <span class="task-actions">
+                                <span class="circle"></span>
+                                <span class="circle"></span>
+                                <span class="circle"></span>
+                                <span class="actions-container">
+                                    <a class="action-btn" href="/task/update/{{ task.pk }}">Edit</a>
+                                    <a class="action-btn" href="/task/delete/{{ task.pk }}">Delete</a>
+                                </span>
                             </span>
                         </span>
-                    </span>
-            </li>
+                    </li>
+                {% endif %}
             {% endfor %}
             <form class="add-task-form" id="add-task" action="task/add" method="post">
                 {% csrf_token %}
