--- a/tasks/static/css/main_page.css
+++ b/tasks/static/css/main_page.css
@@ -74,7 +74,6 @@ body {
     display: inline-block;
     width: 20px;
     height: 20px;
-    background-color: red;
     border-radius: 50%;
     margin-right: 15px;
 }
@@ -186,7 +185,7 @@ body {
 .task-counter {
     margin-left: 15px;
     font-size: 12px;
-    color: aquamarine;
+    color: #000000;
 }
 
 .add-btn {
@@ -262,7 +261,7 @@ body {
 }
 
 .add-task-form .edit-task-name {
-    flex-basis: 70%;
+    flex-basis: 65%;
     border-right: none;
 }
 
@@ -291,7 +290,7 @@ body {
 }
 
 .add-task-form .change-date {
-    flex-basis: 30%;
+    flex-basis: 35%;
 }
 
 /*add task form end*/
