--- a/tasks/templates/tasks/base_main_page.html
+++ b/tasks/templates/tasks/base_main_page.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="{% static 'css/main_page.css' %}">
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
 </head>
 <body>
 <header class="main-header">
