add filtrating task for projects

--- a/tasks/templates/tasks/base_main_page.html
+++ b/tasks/templates/tasks/base_main_page.html
@@ -28,7 +28,7 @@
         </div>
         <div class="projects-block">
             <div class="projects-title">
-                Projects
+                <a href="/">Projects</a>
             </div>
             <ul class="projects-list">
                 {% for project in projects %}
