--- a/tasks/templates/tasks/base_main_page.html
+++ b/tasks/templates/tasks/base_main_page.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <header class="main-header">
-    <div class="logo"><a href="/">TODO</a></div>
+    <div class="logo"><a href="/task/all">TODO</a></div>
     <div class="active-user">{{ user }}</div>
     {% if not user.is_authenticated %}
         <a href="{% url 'login' %}">Log In</a>
@@ -33,8 +33,13 @@
             <ul class="projects-list">
                 {% for project in projects %}
                     {% if project.str_pk == selected_project %}
-                        {% block edit_project %}
-                        {% endblock %}
+                        {% if edit_project == True %}
+                            {% block edit_project %}
+                            {% endblock %}
+                        {% else %}
+                            {% block display_selected_project %}
+                            {% endblock %}
+                        {% endif %}
                     {% else %}
                         {% block display_project %}
                         {% endblock %}
