--- a/tasks/templates/tasks/main_page.html
+++ b/tasks/templates/tasks/main_page.html
@@ -7,8 +7,10 @@
                 <span class="priority" style="background-color: white"></span>
             {% elif task.priority == '1' %}
                 <span class="priority" style="background-color: orange"></span>
-            {% else %}
+            {% elif task.priority == '2' %}
                 <span class="priority" style="background-color: red"></span>
+            {% else %}
+                <span class="priority" style="background-color: black"></span>
             {% endif %}
             {% if task.state == True %}
                 <strike><span class="task-name">{{ task.text }} ------------- {{ task.end_time }}</span></strike>
@@ -99,7 +101,29 @@
 {% endblock %}
 
 {% block display_project %}
-    <li class="project">
+    <li class="project" id="project-{{ project.str_pk }}">
+        <span class="project-tag" style="background-color: {{ project.color }}"></span>
+        <a class="project-name" href="/task/project/{{ project.str_pk }}">{{ project.name }}</a>
+        <span class="task-counter"
+              id="proj-task-counter-{{ project.str_pk }}">{{ project.count_active_task }}</span>
+        </span>
+        <span>
+            <span class="project-actions">
+                <span class="circle"></span>
+                <span class="circle"></span>
+                <span class="circle"></span>
+                <span class="actions-container">
+                    <a class="action-btn edit-proj" id="proj-edit-btn-{{ project.str_pk }}"
+                       href="/project/update/{{ project.str_pk }}">Edit</a>
+                    <a class="action-btn delete-proj" id="proj-del-btn-{{ project.str_pk }}">Delete</a>
+                </span>
+            </span>
+        </span>
+    </li>
+{% endblock %}
+
+{% block display_selected_project %}
+    <li class="project" style="background-color:rgb(255,255,255);">
         <span>
             <span class="project-tag" style="background-color: {{ project.color }}"></span>
             <a class="project-name" href="/task/project/{{ project.str_pk }}">{{ project.name }}</a>
