add style to login, signin, logout pages

--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,6 +1,6 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-    <p>Logged out!</p>
-
+    <div class="text"><p>Logged out!</p></div>
+    <div class="text"><a href="/accounts/login">Log in</a></div>
 {% endblock %}
