--- a/templates/registration/signin.html
+++ b/templates/registration/signin.html
@@ -1,10 +1,13 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-    <h2>Sign up</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Sign up</button>
-    </form>
+
+    <div class="wrap">
+        <h1>Please Sign In</h1>
+        <form method="post">
+            {% csrf_token %}
+            {{ form }}
+            <input type="submit" value="Sign Up"/>
+        </form>
+    </div>
 {% endblock %}
